--- a/hotel.html
+++ b/hotel.html
@@ -22,7 +22,7 @@
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css?v=202408291428" rel="stylesheet" />
+    <link href="css/styles.css?v=202411012130" rel="stylesheet" />
     <style>
         #mainNav.navbar-shrink .langSelectDesktop {
             margin-top: 15px;
@@ -70,6 +70,7 @@
                     <li class="nav-item"><a class="nav-link" href="index.html#about" data-i18n="nav.about">About</a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="hotel.html" data-i18n="nav.hotel">Our Hotels</a></li>
+                    <li class="nav-item"><a class="nav-link" href="investing.html" data-i18n="nav.investing">Investing</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#timeline"
                             data-i18n="nav.timeline">Timeline</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#contact"
@@ -106,13 +107,13 @@
                     <div class="featured-text text-lg-left pt-3">
                         <h4><a href="#" data-bs-toggle="modal" data-bs-target="#pieceLioModal" data-i18n="hotel.pieceLio.name">Piece Lio</a></h4>
                         <p class="text-black-50 mb-0">
-                            <span data-i18n="hotel.pieceLio.description">A luxurious beachfront resort offering stunning views of the ocean and world-class amenities.</span>
+                            <span data-i18n="hotel.pieceLio.shortDescription">A luxurious beachfront resort offering stunning views of the ocean and world-class amenities.</span>
                         </p>
                         <div class="d-flex justify-content-between align-items-center mt-2">
                             <div class="text-left">
-                                <span data-i18n="hotel.rating">Rating</span>: <span class="text-warning">★★★★★</span><br>
-                                <span data-i18n="hotel.pricing">Pricing</span>: <span class="text-warning">★★★★★</span><br>
-                                <span data-i18n="hotel.location">Location</span>: <span class="text-warning">★★★★★</span>
+                                <span data-i18n="hotel.rating">Rating</span> <span class="text-warning">★★★★★</span><br>
+                                <span data-i18n="hotel.pricing">Pricing</span> <span class="text-warning">★★★★★</span><br>
+                                <span data-i18n="hotel.location">Location</span> <span class="text-warning">★★★★★</span>
                             </div>
                             <a href="https://hotels.cloudbeds.com/reservation/lqMNR1" target="_blank" class="btn btn-primary" data-i18n="hotel.bookNow">Book Now</a>
                         </div>
@@ -126,13 +127,13 @@
                     <div class="featured-text text-lg-left pt-3">
                         <h4><a href="#" data-bs-toggle="modal" data-bs-target="#nacpanBeachResortModal" data-i18n="hotel.nacpanBeachResort.name">Nacpan Beach Resort</a></h4>
                         <p class="text-black-50 mb-0">
-                            <span data-i18n="hotel.nacpanBeachResort.description">Experience the beauty of Nacpan Beach at this eco-friendly resort, perfect for nature lovers.</span>
+                            <span data-i18n="hotel.nacpanBeachResort.shortDescription">Experience the beauty of Nacpan Beach at this eco-friendly resort, perfect for nature lovers.</span>
                         </p>
                         <div class="d-flex justify-content-between align-items-center mt-2">
                             <div class="text-left">
-                                <span data-i18n="hotel.rating">Rating</span>: <span class="text-warning">★★★★</span><br>
-                                <span data-i18n="hotel.pricing">Pricing</span>: <span class="text-warning">★★★★</span><br>
-                                <span data-i18n="hotel.location">Location</span>: <span class="text-warning">★★★★★</span>
+                                <span data-i18n="hotel.rating">Rating</span> <span class="text-warning">★★★★</span><br>
+                                <span data-i18n="hotel.pricing">Pricing</span> <span class="text-warning">★★★★</span><br>
+                                <span data-i18n="hotel.location">Location</span> <span class="text-warning">★★★★★</span>
                             </div>
                             <a href="https://hotels.cloudbeds.com/reservation/Rl4kvW" target="_blank" class="btn btn-primary" data-i18n="hotel.bookNow">Book Now</a>
                         </div>
@@ -146,13 +147,13 @@
                     <div class="featured-text text-lg-left pt-3">
                         <h4><a href="#" data-bs-toggle="modal" data-bs-target="#nacpanBeachGlampingModal" data-i18n="hotel.nacpanBeachGlamping.name">Nacpan Beach Glamping</a></h4>
                         <p class="text-black-50 mb-0">
-                            <span data-i18n="hotel.nacpanBeachGlamping.description">Enjoy a unique glamping experience with all the comforts of a hotel, right on the beach.</span>
+                            <span data-i18n="hotel.nacpanBeachGlamping.shortDescription">Enjoy a unique glamping experience with all the comforts of a hotel, right on the beach.</span>
                         </p>
                         <div class="d-flex justify-content-between align-items-center mt-2">
                             <div class="text-left">
-                                <span data-i18n="hotel.rating">Rating</span>: <span class="text-warning">★★★★</span><br>
-                                <span data-i18n="hotel.pricing">Pricing</span>: <span class="text-warning">★★★★</span><br>
-                                <span data-i18n="hotel.location">Location</span>: <span class="text-warning">★★★★★</span>
+                                <span data-i18n="hotel.rating">Rating</span> <span class="text-warning">★★★★</span><br>
+                                <span data-i18n="hotel.pricing">Pricing</span> <span class="text-warning">★★★★</span><br>
+                                <span data-i18n="hotel.location">Location</span> <span class="text-warning">★★★★★</span>
                             </div>
                             <a href="https://hotels.cloudbeds.com/en/reservation/FuKvEZ" target="_blank" class="btn btn-primary" data-i18n="hotel.bookNow">Book Now</a>
                         </div>
@@ -166,13 +167,13 @@
                     <div class="featured-text text-lg-left pt-3">
                         <h4><a href="#" data-bs-toggle="modal" data-bs-target="#hHotelVeganHotelModal" data-i18n="hotel.hHotelVeganHotel.name">H Hotel Vegan Friendly Hotel</a></h4>
                         <p class="text-black-50 mb-0">
-                            <span data-i18n="hotel.hHotelVeganHotel.description">A vegan-friendly hotel with plant-based cuisine and eco-conscious rooms.</span>
+                            <span data-i18n="hotel.hHotelVeganHotel.shortDescription">A vegan-friendly hotel with plant-based cuisine and eco-conscious rooms.</span>
                         </p>
                         <div class="d-flex justify-content-between align-items-center mt-2">
                             <div class="text-left">
-                                <span data-i18n="hotel.rating">Rating</span>: <span class="text-warning">★★★★★</span><br>
-                                <span data-i18n="hotel.pricing">Pricing</span>: <span class="text-warning">★★★★</span><br>
-                                <span data-i18n="hotel.location">Location</span>: <span class="text-warning">★★★★★</span>
+                                <span data-i18n="hotel.rating">Rating</span> <span class="text-warning">★★★★★</span><br>
+                                <span data-i18n="hotel.pricing">Pricing</span> <span class="text-warning">★★★★</span><br>
+                                <span data-i18n="hotel.location">Location</span> <span class="text-warning">★★★★★</span>
                             </div>
                             <a href="https://hotels.cloudbeds.com/reservation/E2QFKh" target="_blank" class="btn btn-primary" data-i18n="hotel.bookNow">Book Now</a>
                         </div>
@@ -185,13 +186,13 @@
                     <div class="featured-text text-lg-left pt-3">
                         <h4><a href="#" data-bs-toggle="modal" data-bs-target="#jBoutiqueHotelModal" data-i18n="hotel.jBoutiqueHotel.name">J Boutique Hotel</a></h4>
                         <p class="text-black-50 mb-0">
-                            <span data-i18n="hotel.jBoutiqueHotel.description">A stylish boutique hotel in the heart of El Nido, perfect for urban explorers.</span>
+                            <span data-i18n="hotel.jBoutiqueHotel.shortDescription">A stylish boutique hotel in the heart of El Nido, perfect for urban explorers.</span>
                         </p>
                         <div class="d-flex justify-content-between align-items-center mt-2">
                             <div class="text-left">
-                                <span data-i18n="hotel.rating">Rating</span>: <span class="text-warning">★★★★</span><br>
-                                <span data-i18n="hotel.pricing">Pricing</span>: <span class="text-warning">★★★</span><br>
-                                <span data-i18n="hotel.location">Location</span>: <span class="text-warning">★★★</span>
+                                <span data-i18n="hotel.rating">Rating</span> <span class="text-warning">★★★★</span><br>
+                                <span data-i18n="hotel.pricing">Pricing</span> <span class="text-warning">★★★</span><br>
+                                <span data-i18n="hotel.location">Location</span> <span class="text-warning">★★★</span>
                             </div>
                             <a href="https://hotels.cloudbeds.com/reservation/sT18ih" target="_blank" class="btn btn-primary" data-i18n="hotel.bookNow">Book Now</a>
                         </div>
@@ -205,13 +206,13 @@
                     <div class="featured-text text-lg-left pt-3">
                         <h4><a href="#" data-bs-toggle="modal" data-bs-target="#sResortElNidoModal" data-i18n="hotel.sResortElNido.name">S Resort</a></h4>
                         <p class="text-black-50 mb-0">
-                            <span data-i18n="hotel.sResortElNido.description">A modern resort offering comfort and convenience for leisure and business travelers.</span>
+                            <span data-i18n="hotel.sResortElNido.shortDescription">A modern resort offering comfort and convenience for leisure and business travelers.</span>
                         </p>
                         <div class="d-flex justify-content-between align-items-center mt-2">
                             <div class="text-left">
-                                <span data-i18n="hotel.rating">Rating</span>: <span class="text-warning">★★★★</span><br>
-                                <span data-i18n="hotel.pricing">Pricing</span>: <span class="text-warning">★★★</span><br>
-                                <span data-i18n="hotel.location">Location</span>: <span class="text-warning">★★★★★</span>
+                                <span data-i18n="hotel.rating">Rating</span> <span class="text-warning">★★★★</span><br>
+                                <span data-i18n="hotel.pricing">Pricing</span> <span class="text-warning">★★★</span><br>
+                                <span data-i18n="hotel.location">Location</span> <span class="text-warning">★★★★★</span>
                             </div>
                             <a href="https://hotels.cloudbeds.com/reservation/sT18ih" target="_blank" class="btn btn-primary" data-i18n="hotel.bookNow">Book Now</a>
                         </div>
@@ -224,13 +225,13 @@
                     <div class="featured-text text-lg-left pt-3">
                         <h4><a href="#" data-bs-toggle="modal" data-bs-target="#casaCeciliaModal" data-i18n="hotel.casaCecilia.name">Casa Cecilia</a></h4>
                         <p class="text-black-50 mb-0">
-                            <span data-i18n="hotel.casaCecilia.description">A 3-star accommodation located in the heart of El Nido, offering comfort and convenience.</span>
+                            <span data-i18n="hotel.casaCecilia.shortDescription">A 3-star accommodation located in the heart of El Nido, offering comfort and convenience.</span>
                         </p>
                         <div class="d-flex justify-content-between align-items-center mt-2">
                             <div class="text-left">
-                                <span data-i18n="hotel.rating">Rating</span>: <span class="text-warning">★★★</span><br>
-                                <span data-i18n="hotel.pricing">Pricing</span>: <span class="text-warning">★★★</span><br>
-                                <span data-i18n="hotel.location">Location</span>: <span class="text-warning">★★★★</span>
+                                <span data-i18n="hotel.rating">Rating</span> <span class="text-warning">★★★</span><br>
+                                <span data-i18n="hotel.pricing">Pricing</span> <span class="text-warning">★★★</span><br>
+                                <span data-i18n="hotel.location">Location</span> <span class="text-warning">★★★★</span>
                             </div>
                             <a href="https://www.facebook.com/CasaCeciliaHotel" target="_blank" class="btn btn-primary" data-i18n="hotel.bookNow">Book Now</a>
                         </div>
@@ -243,13 +244,13 @@
                     <div class="featured-text text-lg-left pt-3">
                         <h4><a href="#" data-bs-toggle="modal" data-bs-target="#nacpanBeachVillasModal" data-i18n="hotel.nacpanBeachVillas.name">Nacpan Beach Villas</a></h4>
                         <p class="text-black-50 mb-0">
-                            <span data-i18n="hotel.nacpanBeachVillas.description">Luxurious villas with free WiFi, perfect for couples seeking a romantic getaway.</span>
+                            <span data-i18n="hotel.nacpanBeachVillas.shortDescription">Luxurious villas with free WiFi, perfect for couples seeking a romantic getaway.</span>
                         </p>
                         <div class="d-flex justify-content-between align-items-center mt-2">
                             <div class="text-left">
-                                <span data-i18n="hotel.rating">Rating</span>: <span class="text-warning">★★★★★</span><br>
-                                <span data-i18n="hotel.pricing">Pricing</span>: <span class="text-warning">★★★★</span><br>
-                                <span data-i18n="hotel.location">Location</span>: <span class="text-warning">★★★★★</span>
+                                <span data-i18n="hotel.rating">Rating</span> <span class="text-warning">★★★★★</span><br>
+                                <span data-i18n="hotel.pricing">Pricing</span> <span class="text-warning">★★★★</span><br>
+                                <span data-i18n="hotel.location">Location</span> <span class="text-warning">★★★★★</span>
                             </div>
                             <a href="https://hotels.cloudbeds.com/reservation/JVnObH" target="_blank" class="btn btn-primary" data-i18n="hotel.bookNow">Book Now</a>
                         </div>
