--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css?v=202408291428" rel="stylesheet" />
+    <link href="css/styles.css?v=202411012130" rel="stylesheet" />
     <style>
         #mainNav.navbar-shrink .langSelectDesktop {
             margin-top: 15px;
@@ -71,6 +71,7 @@
                     <li class="nav-item"><a class="nav-link" href="index.html#about" data-i18n="nav.about">About</a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="hotel.html" data-i18n="nav.hotel">Our Hotels</a></li>
+                    <li class="nav-item"><a class="nav-link" href="investing.html" data-i18n="nav.investing">Investing</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#timeline"
                             data-i18n="nav.timeline">Timeline</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#contact"
@@ -1647,10 +1648,22 @@
                 <div class="col-md-4 mb-3 mb-md-0">
                     <div class="card py-4 h-100">
                         <div class="card-body text-center">
-                            <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                            <h4 class="text-uppercase m-0" data-i18n="contact.location">Location</h4>
-                            <hr class="my-4 mx-auto" />
-                            <div class="small text-black-50" data-i18n="contact.locationValue">PH,El Nido</div>
+                            <div class="small text-black-50">
+                                <i class="fas fa-phone text-primary mb-2"></i>
+                                <h4 class="text-uppercase m-0" data-i18n="contact.office">Office</h4>
+                                <hr class="my-4 mx-auto" />
+                                <div>HR Related</div>
+                                <a href="tel:+639176364861">+63 917 636 4861</a>
+                                <hr class="my-2 mx-auto" />
+                                <div>J Hotel - Front Office</div>
+                                <a href="tel:+639171077130">+63 917 107 7130</a>
+                                <hr class="my-2 mx-auto" />
+                                <div>H Hotel Front Office</div>
+                                <a href="tel:+639176364485">+63 917 636 4485</a>
+                                <hr class="my-2 mx-auto" />
+                                <div>S Resort Front Office</div>
+                                <a href="tel:+639176364475">+63 917 636 4475</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -1658,9 +1671,28 @@
                     <div class="card py-4 h-100">
                         <div class="card-body text-center">
                             <i class="fas fa-mobile-alt text-primary mb-2"></i>
-                            <h4 class="text-uppercase m-0" data-i18n="contact.phone">Phone</h4>
+                            <h4 class="text-uppercase m-0" data-i18n="contact.reservation">Reservation</h4>
                             <hr class="my-4 mx-auto" />
-                            <div class="small text-black-50">+639176364861</div>
+                            <div class="small text-black-50">
+                                <div>Nacpan Reservation</div>
+                                <a href="tel:+639171170861">+63 917 117 0861</a><br>
+                                <a href="tel:+639176364571">+63 917 636 4571</a><br>
+                                <a href="tel:+639176364873">+63 917 636 4873</a>
+
+                                <hr class="my-2 mx-auto" />
+
+                                <div>J Hotel - Reservation</div>
+                                <a href="tel:+639171087713">+63 917 108 7713</a>
+
+                                <div>H Hotel Reservation</div>
+                                <a href="tel:+639176364459">+63 917 636 4459</a>
+
+                                <hr class="my-2 mx-auto" />
+
+                                <div>S Resort Reservation</div>
+                                <a href="tel:+639176364480">+63 917 636 4480</a>
+
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -1668,9 +1700,13 @@
                     <div class="card py-4 h-100">
                         <div class="card-body text-center">
                             <i class="fab fa-whatsapp text-primary mb-2"></i>
-                            <h4 class="text-uppercase m-0" data-i18n="contact.whatsapp">What's app</h4>
+                            <h4 class="text-uppercase m-0" data-i18n="contact.bussiness">Business Opportunities</h4>
                             <hr class="my-4 mx-auto" />
-                            <div class="small text-black-50">+886915666911</div>
+                            <p class="text-uppercase m-0" </p>
+                            <div class="small text-black-50" data-i18n="contact.whatsapp">What's app</div>
+                            <a class="small text-black-50" href="tel:+886915666911">+886 915 666 911</a>
+
+                            <hr class="my-2 mx-auto" />
                         </div>
                     </div>
                 </div>
