[modify] update css

--- a/hotel.html
+++ b/hotel.html
@@ -33,8 +33,7 @@
         }
     </style>
     
-    <!-- Load custom scripts -->
-    <script src="js/scripts.js"></script>
+    
 
     <!-- i18next libraries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next/21.6.10/i18next.min.js"></script>
@@ -1096,7 +1095,7 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+    <script src="js/scripts.js?v=202411041034"></script>
 </body>
 
 </html>
