--- a/hhotel-vegan.html
+++ b/hhotel-vegan.html
@@ -79,8 +79,7 @@
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/i18next-browser-languagedetector/6.1.3/i18nextBrowserLanguageDetector.min.js"></script>
 
-    <!-- Load custom scripts -->
-    <script src="js/scripts.js"></script>
+    
 </head>
 
 <body id="page-top">
@@ -220,7 +219,7 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+    <script src="js/scripts.js?v=202411041034"></script>
 </body>
 
 </html>
