[modify] update page content

--- a/index.html
+++ b/index.html
@@ -312,10 +312,19 @@
                             <h3>2025</h3>
                             <div class="row gx-0  align-items-top">
                                 <div class="col-6 p-1">
-                                    <p class="text">Condo Office Complex</p>
+                                    <p class="text">NEW Piece of Sky</p>
                                 </div>
                                 <div class="col-6 p-1">
-                                    <p class="text">Hotel #9</p>
+                                    <p class="text">NEW Sunmai</p>
+                                </div>
+                                <div class="col-6 p-1">
+                                    <p class="text">Oriental Spa 2</p>
+                                </div>
+                                <div class="col-6 p-1">
+                                    <p class="text">Lechon Co</p>
+                                </div>
+                                <div class="col-6 p-1">
+                                    <p class="text">Janu Coffee</p>
                                 </div>
                             </div>
                         </div>
